--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         
-        <title>Document</title>
+        <title>Hello!</title>
     </head>
     <body>
-        
+        <h1>Welcome to my website!</h1>
+        Hello, world!
     </body>
 </html>
